--- a/src/scss/Helpers/_variables.scss
+++ b/src/scss/Helpers/_variables.scss
@@ -76,9 +76,10 @@ $lh-3: 3;
 
 // ---------- BREAK POINTS ----------------
 $breakpoints: (
-  "extra-extra-large": 1400px,
+  
   "extra-large": 1200px,
   "large": 992px,
   "medium": 768px,
   "small": 576px,
+  "screen-2": 600px,
 );
