--- a/src/scss/Layouts/_header.scss
+++ b/src/scss/Layouts/_header.scss
@@ -1,7 +1,7 @@
 .header {
   background-color: $color-white-3;
   box-shadow: $color-white-overlay-3 0px 2px 8px 2px;
-  // position: fixed;
+  position: fixed;
   width: 100%;
   z-index: 99;
   .header__wrap {
@@ -39,13 +39,18 @@
       }
       .active {
         background-color: $color-green-1;
-        color: $color-white-1;
+
         border-radius: $border-radius;
+        a {
+          color: $color-white-1;
+        }
       }
 
       .header__menu--item:hover {
+        a {
+          color: $color-white-1;
+        }
         background-color: $color-green-1;
-        color: $color-white-1;
         border-radius: $border-radius;
       }
     }
@@ -72,7 +77,6 @@
   }
 }
 
-
 @include responsive("screen-2") {
   .header {
     .header__wrap {
@@ -82,4 +86,3 @@
     }
   }
 }
-
